tests/transpiler/x/java/query_sum_select.error
exit status 1
Main.java:3: error: unexpected type
    static java.util.List<int> result = new java.util.ArrayList<int>() {{ for (var n : nums) { if (n > 1) { add(sum(n)); } }}};
                          ^
  required: reference
  found:    int
Main.java:3: error: unexpected type
    static java.util.List<int> result = new java.util.ArrayList<int>() {{ for (var n : nums) { if (n > 1) { add(sum(n)); } }}};
                                                                ^
  required: reference
  found:    int
Main.java:3: error: cannot find symbol
    static java.util.List<int> result = new java.util.ArrayList<int>() {{ for (var n : nums) { if (n > 1) { add(sum(n)); } }}};
                                                                                                                ^
  symbol: method sum(int)
3 errors
